update NextJS and server

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,11 @@
+# Environment (development, staging, production)
+ENVIRONMENT=development
+DEBUG=false
+
 AWS_REGION=us-east-1
 COGNITO_USER_POOL_ID=us-east-1_XXXXXXXXX
 COGNITO_CLIENT_ID=your-client-id
+
+# CORS Origins (comma-separated for multiple)
+# In production, set this to your actual frontend URLs
+CORS_ORIGINS=["http://localhost:3000","http://localhost:5173"]
