add google oauth

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,9 @@ AWS_REGION=us-east-1
 COGNITO_USER_POOL_ID=us-east-1_XXXXXXXXX
 COGNITO_CLIENT_ID=your-client-id
 
+# Google Sign-In (iOS OAuth Client ID)
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+
 # CORS Origins (comma-separated for multiple)
 # In production, set this to your actual frontend URLs
 CORS_ORIGINS=["http://localhost:3000","http://localhost:5173"]
