--- a/ios-client/AWSCognito/Info.plist
+++ b/ios-client/AWSCognito/Info.plist
@@ -10,6 +10,16 @@
 				<string>awscognito</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.670999433286-rchnsgi0krm5g47hpflr7mg2pv8209jh</string>
+			</array>
+		</dict>
 	</array>
+	<key>GIDClientID</key>
+	<string>670999433286-rchnsgi0krm5g47hpflr7mg2pv8209jh.apps.googleusercontent.com</string>
 </dict>
 </plist>
