--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,10 @@ AWS_REGION=us-east-1
 COGNITO_USER_POOL_ID=us-east-1_XXXXXXXXX
 COGNITO_CLIENT_ID=your-client-id
 
+# Apple Sign In (for native iOS Sign in with Apple)
+# This is your iOS app's bundle identifier
+APPLE_BUNDLE_ID=com.example.AWSCognito
+
 # CORS Origins (comma-separated for multiple)
 # In production, set this to your actual frontend URLs
 CORS_ORIGINS=["http://localhost:3000","http://localhost:5173"]
