--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,9 @@ starlette>=0.27.0
 python-jose[cryptography]>=3.3.0
 httpx>=0.24.0
 
+# AWS SDK
+boto3>=1.28.0
+
 # Validation & Settings
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
