google auth flow works

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,9 @@ AWS_REGION=us-east-1
 COGNITO_USER_POOL_ID=us-east-1_XXXXXXXXX
 COGNITO_CLIENT_ID=your-client-id
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
 # Apple Sign In (for native iOS Sign in with Apple)
 # This is your iOS app's bundle identifier
 APPLE_BUNDLE_ID=com.example.AWSCognito
