--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
                 <data android:scheme="awscognito" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".features.login.AppleSignInActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AWSCognito" />
     </application>
 
 </manifest>
