--- a/android-client/gradle/libs.versions.toml
+++ b/android-client/gradle/libs.versions.toml
@@ -63,6 +63,9 @@ androidx-credentials = { group = "androidx.credentials", name = "credentials", v
 androidx-credentials-play-services = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
 google-id = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version = "1.1.1" }
 
+# Browser (Custom Tabs for OAuth)
+androidx-browser = { group = "androidx.browser", name = "browser", version = "1.8.0" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
