--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,23 +1,41 @@
-# Web framework
-fastapi>=0.100.0
-uvicorn[standard]>=0.20.0
-starlette>=0.27.0
-
-# Authentication
-python-jose[cryptography]>=3.3.0
-httpx>=0.24.0
-google-auth>=2.0.0
-
-# AWS SDK
-boto3>=1.28.0
-
-# Validation & Settings
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-python-dotenv>=1.0.0
-
-# Async file operations
-aiofiles>=23.0.0
-
-# Type hints
-typing_extensions>=4.0.0
+aiofiles==25.1.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+boto3==1.42.54
+botocore==1.42.54
+certifi==2026.1.4
+cffi==2.0.0
+click==8.3.1
+colorama==0.4.6
+cryptography==46.0.5
+ecdsa==0.19.1
+fastapi==0.129.0
+google-auth==2.48.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+jmespath==1.1.0
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.13.1
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.22
+PyYAML==6.0.3
+rsa==4.9.1
+s3transfer==0.16.0
+six==1.17.0
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.41.0
+watchfiles==1.1.1
+websockets==16.0
