--- a/android-client/app/src/main/AndroidManifest.xml
+++ b/android-client/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".CognitoApp"
-        android:usesCleartextTraffic="true"
+        android:name=".app.CognitoApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AWSCognito">
         <activity
-            android:name=".MainActivity"
+            android:name=".app.MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:label="@string/app_name"
@@ -31,7 +30,17 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="awscognito" />
+                <data android:scheme="awscognito" android:host="home" />
+                <data android:scheme="awscognito" android:host="dashboard" />
+                <data android:scheme="awscognito" android:host="account" />
+                <data android:scheme="awscognito" android:host="login" />
+            </intent-filter>
+            <!-- OAuth callback deep links -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="awscognito" android:host="apple-callback" />
             </intent-filter>
         </activity>
         <activity
